# alt-diagnostic-tool

./: .gitignore  CMakeLists.txt
.gear/: alt-diagnostic-tool.spec
.github/workflows/: codeql.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  abstractexecutablepage.cpp  abstractexecutablepage.h  adtwizard.cpp  adtwizard.h  adtwizardbuilder.cpp  adtwizardbuilder.h  adtwizardpage.h  adtwizardpage.inl  checkpagewidget.cpp  checkpagewidget.h  checkpagewidget.ui  checkwizardpage.cpp  checkwizardpage.h  checkwizardpage.ui  dbuschecker.cpp  dbuschecker.h  executablestatuswidget.cpp  executablestatuswidget.h  executablestatuswidget.ui  finishpagewidget.cpp  finishpagewidget.h  finishpagewidget.ui  finishwizardpage.cpp  finishwizardpage.h  finishwizardpage.ui  icancelbuttinhandler.h  intropagewidget.cpp  intropagewidget.h  intropagewidget.ui  introwizardpage.cpp  introwizardpage.h  introwizardpage.ui  main.cpp  repairpagewidget.cpp  repairpagewidget.h  repairpagewidget.ui  repairwizardpage.cpp  repairwizardpage.h  repairwizardpage.ui  (+2 more)
src/core/: CMakeLists.txt  adtbaseexecutor.h  adtcheck.cpp  adtcheck.h  adtexecutable.cpp  adtexecutable.h  adtexecutablerunner.cpp  adtexecutablerunner.h  adtexecutablerunnerprivate.cpp  adtexecutablerunnerprivate.h  adtjsonconverter.cpp  adtjsonconverter.h  adtjsonloader.cpp  adtjsonloader.h  adtresolver.cpp  adtresolver.h  diagnostictool.cpp  diagnostictool.h  diagnostictoolprivate.cpp  diagnostictoolprivate.h
